<resources >
    <string  name="app_name">hedgehog-parent</string>
    <string  name="camcorder"  translatable="false">CAMCORDER</string>
    <string  name="sneaker"  translatable="false">SHOW SNEAKER WINDOW</string>
    <string  name="samples"  translatable="false">SAMPLES</string>
    <string  name="username"  translatable="false">USERNAME</string>
    <string  name="download_and_preview"  translatable="false">DOWNLOAD VIDEO</string>
    <string  name="album_multimedia_choice"  translatable="false">ALBUM MULTIMEDIA CHOICE</string>
    <string  name="registration_form_error"  translatable="false">NOTICE: ANY INPUT EMPTY OR TWO INPUT PASSWORDS NOT CONSISTENT</string>
</resources>
